Fix color for theme Hello Puppy on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -432,7 +432,7 @@ ion-menu ion-content .scroll-content{
 
     .item-ios {
         background-color: transparent !important;
-        color: white;
+        color: black;
     }
 
     .button-md, page-import-wallet .inputfile + label{
